deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-cso
spec:
  replicas: 3
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: www-cso
          image: "chrissearle/www_cso:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
