deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www-cso
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
