deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-cso
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: www-cso.k3s.home.chrissearle.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-cso
                port:
                  number: 3000
  tls:
    - secretName: tls
